--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "earth3d",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xxxsjan.github.io/earth3d",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
