--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "earth-3d-threejs",
+  "name": "threejs-home-page",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://xxxsjan.github.io/earth3d",
